# Primitives

./: CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Star.cpp  Star.h  Triangle.cpp  Triangle.h  main.cpp
